--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
 body {
-  font-family: "Mulish", sans-serif;
+  font-family: Arial, Helvetica, sans-serif
   color: rgb(48, 47, 47);
+  font-color: white;
+  
+
 }
 
 h1 {
@@ -83,4 +86,9 @@ h1 {
 .large-degree {
   position: relative;
   top: -90px;
+}
+
+.card-body {
+  background: radial-gradient(circle at 10% 20%, rgb(253, 239, 132) 0%, rgb(247, 198, 169) 54.2%, rgb(21, 186, 196) 100.3%);
+
 }
